[package]
name = "skora"
version = "0.1.0"
edition = "2018"
license = "Apache-2.0"
description = "This library provides functions to read and extract data from Autodesk Sketchbook tiff files and export them as Open Raster files for use in Gimp or Krita."
homepage = "https://github.com/aero530/skora"
documentation = "https://docs.rs/skora"
repository = "https://github.com/aero530/skora"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pretty-hex = "0.2.1"
byteorder = "1.4.3"
num-traits = "0.2.14"
num-derive = "0.3.3"
num = "0.4.0"
image = "0.23.14"
zip = "0.5.13"
hex = "0.4.3"